Some basic cleanup / renaming

--- a/index.html
+++ b/index.html
@@ -2,20 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Catch of the Day!</title>
+  <title>Boilerplate</title>
   <link href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="/build/css/style.css">
-  <link rel="shortcut icon" href="http://facebook.github.io/react/favicon.ico">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
-
-    <input type="checkbox" id="fold">
-    <label for="fold">Fold</label>
-
     <div id="main">
     </div>
-
   <script src="/build/main.js"></script>
-
 </body>
 </html>
