--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MetaSEQ</title>
+  <title>MetaSeek</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300,400,400i,700" rel="stylesheet">
   <link rel="stylesheet" href="/build/css/style.css">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
