Simple Plotly example
Adds a Plotly scatterplot to the bottom of the Explore page

Notes: https://github.com/plotly/plotly.js/issues/204 - Plotly does not
support a “preferred” React component for wrapping a Plotly chart. The
modules installable on NPM aren’t supporting by them or maintained
well. Probably not worth using.

They do talk about building a Plot.ly chart in a React app in a
tutorial here: https://academy.plot.ly/react/3-with-plotly/. It just
talks about straightforwardly importing the plot.ly.js file in the HTML
(not as a React component) and building a simple wrapper around it.
That’s what I’ve done here.

The tutorial talks about referencing a global variable with
create-react-app - which we aren’t using. Instead, just map it to the
window.Plotly object
(https://github.com/facebookincubator/create-react-app/blob/master/packa
ges/react-scripts/template/README.md#using-global-variables).

Finally, the way Dash works is to compile React components INTO Python
classes. Very cool, but not useful for us, we’d rather go the opposite
direction. Worth reading: https://plot.ly/dash/plugins

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <!-- endbuild -->
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <script src="https://cdn.plot.ly/plotly-1.8.0.min.js"></script>
   <style type='text/css'> width: 100%;
   @-webkit-keyframes uil-rolling-anim {
     0% {
