--- a/client/index.html
+++ b/client/index.html
@@ -5,10 +5,10 @@
   <title>MetaSeek</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300,400,400i,700" rel="stylesheet">
     <!-- build:css -->
-  <link rel="stylesheet" href="./build/css/styles.css">
+  <link rel="stylesheet" href="/build/css/styles.css">
     <!-- endbuild -->
-  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
    <!-- Place this tag in your head or just before your close body tag. -->
    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
@@ -16,7 +16,7 @@
     <div id="main">
     </div>
     <!-- build:js -->
-    <script src="./build/main.js"></script>
+    <script src="/build/main.js"></script>
     <!-- endbuild -->
 </body>
 </html>
