Add a decent favicon

--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,8 @@
     <!-- build:css -->
   <link rel="stylesheet" href="/build/css/styles.css">
     <!-- endbuild -->
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16" />
    <!-- Place this tag in your head or just before your close body tag. -->
    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
