--- a/client/index.html
+++ b/client/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>MetaSeek</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300,400,400i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300,400,400i,500,700" rel="stylesheet">
     <!-- build:css -->
   <link rel="stylesheet" href="/build/css/styles.css">
     <!-- endbuild -->
-  <link rel="icon" type="image/png" href="/images/metaseek_logo_32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/images/metaseek_logo_16x16.png" sizes="16x16" />
-   <!-- Place this tag in your head or just before your close body tag. -->
+  <link rel="icon" type="image/png" href="/images/favicon-32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/images/favicon-16.png" sizes="16x16" />
    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 <body>
