--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>MetaSeek</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300,400,400i,500,700" rel="stylesheet">
     <!-- build:css -->
