--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>MetaSeek</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300,400,400i,500,700" rel="stylesheet">
     <!-- build:css -->
   <link rel="stylesheet" href="/build/css/styles.css">
