--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
   <title>MetaSeek</title>
   <meta name="viewport" content="width=768"/>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300,400,400i,500,700" rel="stylesheet">
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.43.0/mapbox-gl.css' rel='stylesheet' />
     <!-- build:css -->
   <link rel="stylesheet" href="/build/css/styles.css">
     <!-- endbuild -->
